# mpris-media-controls

./: .gitignore  LICENSE-MIT  README.md  justfile  media-controls.service  package-lock.json  package.json  pnpm-lock.yaml
service/: Cargo.toml
service/assets/: index.html  manifest.webmanifest  sw.js
service/assets/assets/: index-B3BhltLT.js  index-B4g_OdyT.css
service/src/: main.rs  media.rs  pulseaudio.rs  ui.rs
service/src/media/: player.rs  routes.rs
ui/: .gitignore  .prettierrc.js  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  config.ts  hooks.ts  index.css  main.tsx  media.ts  playerSse.ts  playersContext.tsx  queryClient.ts  settings.ts  sse.tsx
ui/src/components/: GlassBox.tsx  MainContent.tsx  MediaButtons.tsx  MediaTrack.tsx  Sheet.tsx  Volume.tsx
