[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3.0"
serde = "1"
serde_json = "1"
async-stream = "0.3"
futures = "0.3"
zvariant = "5.8"
pin-project = "1.1"
reqwest = { version = "0.12" }
async-trait= "0.1"
